# clamav-bytecode-compiler

./: .clang-format  .gitignore  AUTHORS.txt  CMakeLists.txt  COPYING.re2c  Dockerfile  INSTALL.txt  Jenkinsfile  Makefile  NEWS.md  README  README.md  README.txt  SECURITY.md  _header  _oasis  _tags  bc2h.pl  bugpoint.sh  clam-format  clambc-version.h.in  compile.sh  compile_debug.sh  compile_examples.sh  configure  debug.sh  merge-new.sh  myocamlbuild.ml  setup.ml  startup.c  sync_clamav.sh  taggy.sh  valgrind.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clang-format.yml  (+2 more)
ClamBC/: ClamBCCommon.h  ClamBCDiagnostics.cpp  ClamBCDiagnostics.h  ClamBCLogicalCompiler.cpp  ClamBCLowering.cpp  ClamBCModule.cpp  ClamBCModule.h  ClamBCOptimizers.cpp  ClamBCRTChecks.cpp  ClamBCRebuild.cpp  ClamBCRegAlloc.cpp  ClamBCTargetMachine.cpp  ClamBCTargetMachine.h  ClamBCTrace.cpp  ClamBCVerifier.cpp  ClamBCWriter.cpp  Makefile  clambc.h  version.c
clambc-ifacegen/: CMakeLists.txt  ifacegen.cpp
clambc-ifacegen/clang/Basic/: README.md
clambcc/: CMakeLists.txt  clambc-compiler.py
cmake/: FindClamAV.cmake  FindClang.cmake  FindLLVM.cmake
driver/: Makefile
examples/: CMakeLists.txt
examples/HelloWorld/: HelloWorld.cpp
examples/LegacyPassManager/: CMakeLists.txt
examples/LegacyPassManager/HelloWorld/: HelloWorld.cpp
examples/PassManager/: CMakeLists.txt
examples/PassManager/AnalysisPlugin/: AnalysisPlugin.cpp  CMakeLists.txt
examples/PassManager/input/: compile.sh  run_opt.sh
examples/in/: api_extract.o1.c  api_files.o1.c  arithmetic.o1.c  calls.o0.c  debug.o1.c  debugapi.o1.c  disasmbug.c  div0.o1.c  g1.c  gunzip.c  imp_exp.c  inf.o1.c  jsnorm.c  kind.c  lsig.o1.c  match_with_disasm.o1.c  match_with_read.o1.c  minmax.c  null.c  pdf2.c  pdf3.c  pe_simple.o1.c  peinfo.c  phi.o0.c  ptr.o0.c  reg1.o1.c  resimple.c  retmagic.o1.c  suspacked.c  test.c  testadt.o1.c  yc_bytecode.o1.c  yc_modified.o1.c
examples/startup/: startup.c  startup.cbc
headers/: CMakeLists.txt  bytecode_api.h  bytecode_detect.h  bytecode_disasm.h  bytecode_execs.h  bytecode_ilog.h  bytecode_local.h  bytecode_pe.h  bytecode_pe_structs.h  bytecode_types.h
ifacegen/: ClamBCCommon.h  Makefile  ifacegen.cpp
libclambcc/: CMakeLists.txt  ClamBCAnalyzer.cpp  ClamBCAnalyzer.h  ClamBCChangeMallocArgSize.cpp  ClamBCDiagnostics.cpp  ClamBCDiagnostics.h  ClamBCExtendPHIsTo64Bit.cpp  ClamBCLogicalCompiler.cpp  ClamBCLogicalCompilerHelper.cpp  ClamBCLowering.cpp  ClamBCLowering.h  ClamBCLoweringNF.cpp  ClamBCModule.h  ClamBCPrepareGEPsForWriter.cpp  ClamBCPreserveABIs.cpp  ClamBCRebuild.cpp  ClamBCRegAlloc.cpp  ClamBCRegAlloc.h  ClamBCRemoveFSHL.cpp  ClamBCRemovePointerPHIs.cpp  ClamBCRemoveUSUB.cpp  ClamBCRemoveUndefs.cpp  ClamBCRemoveUnsupportedICMPIntrinsics.cpp  ClamBCTrace.cpp  ClamBCUtilities.cpp  ClamBCUtilities.h  ClamBCVerifier.cpp  ClamBCWriter.cpp  Notes.txt  bytecode_api.h  version.c
libclambcc/ClamBCAnalyzer/: CMakeLists.txt  ClamBCAnalyzer.cpp  ClamBCAnalyzer.h
libclambcc/ClamBCChangeMallocArgSize/: CMakeLists.txt  ClamBCChangeMallocArgSize.cpp
libclambcc/ClamBCConvertIntrinsics/: ClamBCConvertIntrinsics.cpp
libclambcc/ClamBCConvertIntrinsicsTo32Bit/: CMakeLists.txt  ClamBCConvertIntrinsicsTo32Bit.cpp
libclambcc/ClamBCCopyrightHandler/: ClamBCCopyrightHandler.cpp
libclambcc/ClamBCExtendPHIsTo64Bit/: CMakeLists.txt  ClamBCExtendPHIsTo64Bit.cpp
libclambcc/ClamBCGEPSplitter/: ClamBCGEPSplitter.cpp
libclambcc/ClamBCLogicalCompiler/: CMakeLists.txt  ClamBCLogicalCompiler.cpp
libclambcc/ClamBCLogicalCompilerHelper/: CMakeLists.txt  ClamBCLogicalCompilerHelper.cpp
libclambcc/ClamBCLowering/: CMakeLists.txt  ClamBCLowering.cpp  ClamBCLowering.cpp.save  ClamBCLowering.h  ClamBCLoweringF.cpp  ClamBCLoweringNF.cpp
libclambcc/ClamBCModule/: ClamBCModule.cpp
libclambcc/ClamBCOutlineEndiannessCalls/: CMakeLists.txt  ClamBCOutlineEndiannessCalls.cpp
libclambcc/ClamBCPrepareGEPsForWriter/: CMakeLists.txt  ClamBCPrepareGEPsForWriter.cpp
libclambcc/ClamBCPreserveABIs/: CMakeLists.txt  ClamBCPreserveABIs.cpp
libclambcc/ClamBCRTChecks/: ClamBCRTChecks.cpp
libclambcc/ClamBCRebuild/: CMakeLists.txt  ClamBCRebuild.cpp
libclambcc/ClamBCRegAlloc/: CMakeLists.txt  ClamBCRegAlloc.cpp  ClamBCRegAlloc.h
libclambcc/ClamBCRemoveFSHL/: CMakeLists.txt  ClamBCRemoveFSHL.cpp
libclambcc/ClamBCRemoveFreezeInsts/: CMakeLists.txt  ClamBCRemoveFreezeInsts.cpp
libclambcc/ClamBCRemoveICMPSLE/: CMakeLists.txt  ClamBCRemoveICMPSLE.cpp
libclambcc/ClamBCRemovePointerPHIs/: CMakeLists.txt  ClamBCRemovePointerPHIs.cpp
libclambcc/ClamBCRemoveSelectInsts/: ClamBCRemoveSelectInsts.cpp
libclambcc/ClamBCRemoveUSUB/: CMakeLists.txt  ClamBCRemoveUSUB.cpp
libclambcc/ClamBCRemoveUndefs/: CMakeLists.txt  ClamBCRemoveUndefs.cpp
libclambcc/ClamBCRemoveUnsupportedICMPIntrinsics/: CMakeLists.txt  ClamBCRemoveUnsupportedICMPIntrinsics.cpp
libclambcc/ClamBCTrace/: CMakeLists.txt  ClamBCTrace.cpp
libclambcc/ClamBCVerifier/: CMakeLists.txt  ClamBCVerifier.cpp
libclambcc/ClamBCWriter/: CMakeLists.txt  ClamBCWriter.cpp
libclambcc/Common/: CMakeLists.txt  ClamBCCommon.h  ClamBCDiagnostics.cpp  ClamBCModule.h  ClamBCRegAlloc.cpp  ClamBCUtilities.cpp  ClamBCUtilities.h  clambc.h  version.c
llvm/: Makefile  Makefile.config.in  Makefile.rules
llvm_test_suite/: README.md  README.xt  clambc_test_compiler  clambc_test_compiler.py
regex/: .gitignore  Makefile.in  _tags  all.itarget  build.sh  compile.ml  configure  configure.ac  libre2internal.clib  myocamlbuild.ml  re2internal.ml  re2internal.mli  re2internal.mllib  re2internal_stubs.cc  re2transform.ml  test.ml
regex/re2/: Makefile
regex/re2/re2/: dfa.cc  prog.h
src/: bits.ml  clambc-backend.mllib  codesection.ml  common.ml  compiler.ml  datasection.ml  debug.ml  diag.ml  encode.ml  layout.ml  linksection.ml  main.ml  sectiontypes.ml  sourcesection.ml
temp_delete_when_merge/: build_all.py  run_opt.sh
test/: 01_basic_compile_test.py  02_basic_runtime_test.py  03_feature_test.py  CMakeLists.txt  testcase.py
tests/: bench.ml  test.ml
(+394 files in other folders)
