# Copyright (C) 2021 Cisco Systems, Inc. and/or its affiliates. All rights reserved.

install(
    FILES
        bcfeatures.h
        bytecode_api_decl.c.h
        bytecode_api.h
        bytecode_detect.h
        bytecode_disasm.h
        bytecode_execs.h
        bytecode_features.h
        bytecode.h
        bytecode_ilog.h
        bytecode_local.h
        bytecode_pe.h
        bytecode_pe_structs.h
        bytecode_types.h
        emmintrin.h
        float.h
        iso646.h
        limits.h
        mmintrin.h
        mm_malloc.h
        pmmintrin.h
        smmintrin.h
        stdarg.h
        stdbool.h
        stddef.h
        stdint.h
        tgmath.h
        tmmintrin.h
        xmmintrin.h
    DESTINATION include
)
