# Copyright (C) 2021 Cisco Systems, Inc. and/or its affiliates. All rights reserved.


add_subdirectory(ClamBCLogicalCompiler)
add_subdirectory(ClamBCRemoveUndefs)
add_subdirectory(ClamBCPreserveABIs)
add_subdirectory(ClamBCAnalyzer)
add_subdirectory(Common)
add_subdirectory(ClamBCRemovePointerPHIs)
add_subdirectory(ClamBCLowering)

