# Copyright (C) 2021 Cisco Systems, Inc. and/or its affiliates. All rights reserved.


set (CLAMBC_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(ClamBCLogicalCompiler)
add_subdirectory(ClamBCLogicalCompilerHelper)
#add_subdirectory(ClamBCRemoveUndefs)
add_subdirectory(ClamBCPreserveABIs)
add_subdirectory(ClamBCAnalyzer)
add_subdirectory(Common)
add_subdirectory(ClamBCVerifier)
#add_subdirectory(ClamBCRemovePointerPHIs)
add_subdirectory(ClamBCLowering)
add_subdirectory(ClamBCRemoveFreezeInsts)
add_subdirectory(ClamBCWriter)
add_subdirectory(ClamBCTrace)
add_subdirectory(ClamBCOutlineEndiannessCalls)
add_subdirectory(ClamBCChangeMallocArgSize)
add_subdirectory(ClamBCExtendPHIsTo64Bit)
add_subdirectory(ClamBCRebuild)
add_subdirectory(ClamBCRegAlloc)
add_subdirectory(ClamBCConvertIntrinsicsTo32Bit)
add_subdirectory(ClamBCPrepareGEPsForWriter)
add_subdirectory(ClamBCRemoveICMPSLE)
add_subdirectory(ClamBCRemoveUSUB)
add_subdirectory(ClamBCRemoveUnsupportedICMPIntrinsics)
add_subdirectory(ClamBCRemoveFSHL)
